--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,8 @@
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
+
   }
 }
