--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "airbnb",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:flowtype/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -18,13 +19,17 @@
     "sourceType": "module"
   },
   "plugins": [
-    "react", "react-hooks", "prettier"
+    "react", "react-hooks", "prettier", "flowtype"
   ],
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
-
+  },
+  "settings": {
+    "flowtype": {
+      "onlyFilesWithFlowAnnotation": true
+    }
   }
 }
