--- a/package.json
+++ b/package.json
@@ -36,9 +36,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@storybook/addon-a11y": "^6.3.7",
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-knobs": "^6.3.0",
     "@storybook/addon-links": "^6.3.7",
+    "@storybook/builder-webpack5": "^6.3.7",
+    "@storybook/manager-webpack5": "^6.3.7",
     "@storybook/react": "^6.3.7",
     "autoprefixer": "^10.3.1",
     "babel-eslint": "^10.1.0",
