--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install",
+    "flow": "flow status && echo 'Type checking done!'",
+    "format": "pretty-quick && echo 'Formatting done!'",
+    "lint": "eslint --fix --ext .js,.jsx . && echo 'Linting done!'",
+    "validate": "yarn flow && yarn format && yarn lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
@@ -58,9 +63,16 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "flow-bin": "^0.156.0",
     "gatsby-plugin-postcss": "^4.10.0",
+    "husky": "^7.0.0",
+    "lint-staged": ">=10",
     "postcss": "^8.3.6",
     "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
     "prop-types": "^15.7.2",
     "tailwindcss": "^2.2.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TechStackLK/front-end"
   }
 }
