added brand colors extract NavBar code to small components Set layout for sm, md breakpoints added eslint rule : no restricted imports from inside the other features added full logo setup postcss with storybook

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,12 +18,30 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "react-hooks", "prettier", "flowtype"],
+  "plugins": [
+    "react",
+    "react-hooks",
+    "prettier",
+    "flowtype"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
+    ],
+    "no-restricted-imports": [
+      "error",
+      {
+        "patterns": [
+          "@/features/*/*"
+        ]
+      }
+    ]
   },
   "settings": {
     "flowtype": {
