--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-knobs": "^6.3.0",
     "@storybook/addon-links": "^6.3.7",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.3.7",
     "@storybook/manager-webpack5": "^6.3.7",
     "@storybook/react": "^6.3.7",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
@@ -62,14 +63,14 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "flow-bin": "^0.156.0",
-    "gatsby-plugin-postcss": "^4.10.0",
+    "gatsby-plugin-postcss": "^4.12.0",
     "husky": "^7.0.0",
     "lint-staged": ">=10",
-    "postcss": "^8.3.6",
+    "postcss": "^7",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "prop-types": "^15.7.2",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "repository": {
     "type": "git",
