added tailwind plugins, gatsby webpack bundle analyser, tailwind eslint plugin conditionally enable tailwindcss-debug-screens plugin added build scripts for tailwindcss and test fixed tailwind postcss gatsby build issue by updating dependencies fixed tailwind eslint issues update tailwind eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:prettier/recommended",
-    "plugin:flowtype/recommended"
+    "plugin:flowtype/recommended",
+    "plugin:tailwindcss/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -41,7 +42,9 @@
           "@/features/*/*"
         ]
       }
-    ]
+    ],
+    "tailwindcss/classnames-order": "error",
+    "tailwindcss/no-custom-classname": "error"
   },
   "settings": {
     "flowtype": {
