--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   ],
   "scripts": {
     "develop": "gatsby develop",
-    "start": "gatsby develop",
+    "develop-css": "TAILWIND_MODE=watch postcss -i node_modules/tailwindcss/dis/tailwind.css -o dist/build.css --watch",
     "build": "gatsby build",
+    "build-css": "postcss -i node_modules/tailwindcss/dis/tailwind.css -o --minify dist/build.css",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "test": "",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prepare": "husky install",
@@ -23,6 +25,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
+    "@tailwindcss/forms": "^0.3.3",
     "@heroicons/react": "^1.0.3",
     "gatsby": "^3.10.2",
     "gatsby-plugin-flow": "^2.10.0",
@@ -35,6 +38,8 @@
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby-plugin-postcss": "^4.12.0",
+    "postcss": "^8.3.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
@@ -50,7 +55,6 @@
     "@storybook/builder-webpack5": "^6.3.7",
     "@storybook/manager-webpack5": "^6.3.7",
     "@storybook/react": "^6.3.7",
-    "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
@@ -62,15 +66,18 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwindcss": "^1.14.3",
     "flow-bin": "^0.156.0",
-    "gatsby-plugin-postcss": "^4.12.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
     "husky": "^7.0.0",
     "lint-staged": ">=10",
-    "postcss": "^7",
+    "postcss-cli": "^8.3.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "prop-types": "^15.7.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "autoprefixer": "^10.3.2",
+    "tailwindcss": "^2.2.7",
+    "tailwindcss-debug-screens": "^2.1.0"
   },
   "repository": {
     "type": "git",
