--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
     "prepare": "husky install",
     "flow": "flow status && echo 'Type checking done!'",
     "format": "pretty-quick && echo 'Formatting done!'",
-    "lint": "eslint --fix --ext .js,.jsx . && echo 'Linting done!'",
+    "lint": "eslint --fix --ext .js,.jsx . && ls-lint && echo 'Linting done!'",
     "validate": "yarn flow && yarn format && yarn lint"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
-    "@tailwindcss/forms": "^0.3.3",
     "@heroicons/react": "^1.0.3",
+    "@tailwindcss/forms": "^0.3.3",
     "gatsby": "^3.10.2",
     "gatsby-plugin-flow": "^2.10.0",
     "gatsby-plugin-google-gtag": "^3.10.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-postcss": "^4.12.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
-    "gatsby-plugin-postcss": "^4.12.0",
     "postcss": "^8.3.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@ls-lint/ls-lint": "^1.10.0",
     "@storybook/addon-a11y": "^6.3.7",
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
@@ -55,6 +56,7 @@
     "@storybook/builder-webpack5": "^6.3.7",
     "@storybook/manager-webpack5": "^6.3.7",
     "@storybook/react": "^6.3.7",
+    "autoprefixer": "^10.3.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.32.0",
@@ -75,7 +77,6 @@
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "prop-types": "^15.7.2",
-    "autoprefixer": "^10.3.2",
     "tailwindcss": "^2.2.7",
     "tailwindcss-debug-screens": "^2.1.0"
   },
