installed flow-typed updated .flowconfig to enable strict added react-dom type defs ignore flow type defs in eslint, prettier and ls-lint remove ls-lint check from validate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,13 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "cSpell.words": ["heroicons"]
+  "cSpell.words": [
+    "flowtype",
+    "gtag",
+    "headlessui",
+    "heroicons",
+    "kebabcase",
+    "pascalcase",
+    "tailwindcss"
+  ]
 }
