--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwindcss": "^1.14.3",
     "flow-bin": "^0.156.0",
+    "flow-typed": "^3.3.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
     "husky": "^7.0.0",
     "lint-staged": ">=10",
