--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
+    "@icons-pack/react-simple-icons": "^4.6.1",
     "@tailwindcss/forms": "^0.3.3",
     "gatsby": "^3.10.2",
     "gatsby-plugin-flow": "^2.10.0",
