added error lense to workspace extensions and changed vscode workspace settings to chek js/ts

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
     "msjsdiag.debugger-for-chrome",
     "yzhang.markdown-all-in-one",
     "wayou.vscode-todo-highlight",
-    "streetsidesoftware.code-spell-checker"
+    "streetsidesoftware.code-spell-checker",
+    "usernamehw.errorlens"
   ]
 }
