removed web font loader plugin, added fonts a npm packages to improve performance and preload issues, changed the headline font to bitter to avoid watering down logo font

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "validate": "yarn flow && yarn format && yarn lint"
   },
   "dependencies": {
+    "@fontsource/bitter": "^4.5.0",
+    "@fontsource/open-sans": "^4.5.0",
     "@headlessui/react": "^1.4.0",
     "@icons-pack/react-simple-icons": "^4.6.1",
     "@tailwindcss/forms": "^0.3.3",
@@ -37,7 +39,6 @@
     "gatsby-plugin-robots-txt": "^1.6.8",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "postcss": "^8.3.6",
