Finished footer design, changed light brand color, restructure product categories data and moved to js file, changed surface color, added shadow to navbar and searchbox, set body font to open sans, changed ls-lint for data dir js files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,14 +7,26 @@
     "source.fixAll.eslint": true
   },
   "cSpell.words": [
+    "ASUS",
+    "benq",
     "cheveron",
     "flowtype",
     "gtag",
     "headlessui",
     "heroicons",
     "kebabcase",
+    "Konika",
+    "Kyozera",
+    "Lexmark",
+    "Minota",
+    "Monita",
+    "Pantem",
+    "Panten",
     "pascalcase",
+    "Richo",
+    "Riso",
     "tailwindcss",
-    "techstack"
+    "techstack",
+    "Viewsonic"
   ]
 }
