changed heading font, added more words to workspace dictionary, added carousel component, changed index page content.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,13 +10,16 @@
     "ASUS",
     "benq",
     "cheveron",
+    "deca",
     "flowtype",
+    "fontsource",
     "gtag",
     "headlessui",
     "heroicons",
     "kebabcase",
     "Konika",
     "Kyozera",
+    "lexend",
     "Lexmark",
     "Minota",
     "Monita",
