--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "validate": "yarn flow && yarn format && yarn lint"
   },
   "dependencies": {
-    "@fontsource/bitter": "^4.5.0",
+    "@fontsource/lexend-deca": "^4.5.1",
     "@fontsource/open-sans": "^4.5.0",
     "@headlessui/react": "^1.4.0",
     "@icons-pack/react-simple-icons": "^4.6.1",
@@ -41,6 +41,7 @@
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
+    "keen-slider": "^5.5.1",
     "postcss": "^8.3.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
