Updated ProductCategories, Set carousel slides, Change font colors of footer and change the opactity of social media icons to improve accessiblity, Increase search box shadow, Added slides and category images, Added more words to workspace dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "ASUS",
     "benq",
     "cheveron",
+    "classname",
     "deca",
     "flowtype",
     "fontsource",
@@ -23,13 +24,14 @@
     "Lexmark",
     "Minota",
     "Monita",
-    "Pantem",
-    "Panten",
+    "Pantum",
     "pascalcase",
     "Richo",
     "Riso",
+    "subwoofers",
     "tailwindcss",
     "techstack",
-    "Viewsonic"
+    "Viewsonic",
+    "webp"
   ]
 }
