changed the menu label color for improved accessibility, added 2 scripts package.json for clean dev and clean build, changed the index page category heading for consistency.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "scripts": {
     "develop": "gatsby develop",
     "develop-css": "TAILWIND_MODE=watch postcss -i node_modules/tailwindcss/dis/tailwind.css -o dist/build.css --watch",
+    "clean-develop": "gatsby clean && gatsby develop",
     "build": "gatsby build",
     "build-css": "postcss -i node_modules/tailwindcss/dis/tailwind.css -o --minify dist/build.css",
+    "clean-build": "gatsby clean && gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "",
