Added placeholder effect to static images, added gatsby serve to clean-build, build-serve script, marked tailwindcss classes as important

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean-develop": "gatsby clean && gatsby develop",
     "build": "gatsby build",
     "build-css": "postcss -i node_modules/tailwindcss/dis/tailwind.css -o --minify dist/build.css",
-    "clean-build": "gatsby clean && gatsby build",
+    "clean-build": "gatsby clean && gatsby build && gatsby serve",
+    "build-serve": "gatsby build && gatsby serve",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "",
