Updated ProductCategories, renamed the images to have lowercases letters, finished sub category pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "source.fixAll.eslint": true
   },
   "cSpell.words": [
+    "alexa",
     "ASUS",
     "benq",
     "cheveron",
@@ -26,12 +27,14 @@
     "Monita",
     "Pantum",
     "pascalcase",
+    "Playstations",
     "Richo",
     "Riso",
     "subwoofers",
     "tailwindcss",
     "techstack",
     "Viewsonic",
+    "walkie",
     "webp"
   ]
 }
