imporve about page and contact page, finished 404 page layout, added two new words to workspace dictionary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,9 +27,11 @@
     "Lexmark",
     "Minota",
     "Monita",
+    "Nugegoda",
     "Pantum",
     "pascalcase",
     "Playstations",
+    "replyto",
     "Richo",
     "Riso",
     "subwoofers",
