--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop",
     "develop-css": "TAILWIND_MODE=watch postcss -i node_modules/tailwindcss/dis/tailwind.css -o dist/build.css --watch",
     "clean-develop": "gatsby clean && gatsby develop",
     "build": "gatsby build",
@@ -44,12 +44,15 @@
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-source-storyblok": "^3.0.2",
     "gatsby-transformer-sharp": "^3.10.0",
     "keen-slider": "^5.5.1",
     "postcss": "^8.3.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "storyblok-js-client": "^4.1.5",
+    "storyblok-react": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
