Added SEO component to pages and templates, added keys to Faqs list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
     "Mobitel",
     "Monita",
     "Nugegoda",
+    "Ooops",
     "Pantum",
     "pascalcase",
     "Playstations",
@@ -39,6 +40,7 @@
     "subwoofers",
     "tailwindcss",
     "techstack",
+    "techstacklk",
     "unencrypted",
     "Viewsonic",
     "walkie",
