added ProductCarousel component and finished product page layout, upgraded keen slider to v6

--- a/package.json
+++ b/package.json
@@ -40,14 +40,16 @@
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
     "gatsby-plugin-postcss": "^4.12.0",
+    "gatsby-plugin-prismic-previews": "^5.2.1",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-source-prismic": "^5.2.3",
     "gatsby-source-storyblok": "^3.0.2",
     "gatsby-transformer-sharp": "^3.10.0",
-    "keen-slider": "^5.5.1",
+    "keen-slider": "^6.0.4",
     "postcss": "^8.3.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
