changed Carousel useKeenSlider hook code according to newly suggested code, replaced some plain css in ProductCarousel with tailwindcss, moved the GA tracking id to .env.production, removed ENABLE_GATSBY_REFRESH_ENDPOINT from develop script and added to env.development, changed storyblok version depend on gatsby mode env, changed the prettierrc trailing comma to es5

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "ENABLE_GATSBY_REFRESH_ENDPOINT=true gatsby develop",
+    "develop": "gatsby develop",
     "develop-css": "TAILWIND_MODE=watch postcss -i node_modules/tailwindcss/dis/tailwind.css -o dist/build.css --watch",
     "clean-develop": "gatsby clean && gatsby develop",
     "build": "gatsby build",
