--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,7 @@
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "error",
     "react/forbid-prop-types": "off",
     "import/no-extraneous-dependencies": [
       "error",
