--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
   "js/ts.implicitProjectConfig.checkJs": true,
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.organizeImports": true,
+    "source.fixAll.eslint": true,
+    "source.addMissingImports": true
   },
   "cSpell.words": [
     "alexa",
