defined listbox props, fixed checkout button link, finished checkout layout, enabled disabled variant

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,41 +10,63 @@
   },
   "cSpell.words": [
     "alexa",
+    "Ampara",
     "ASUS",
+    "Badulla",
+    "Batticaloa",
     "benq",
     "cheveron",
     "classname",
     "deca",
+    "Eliya",
     "flowtype",
     "fontsource",
+    "Gampaha",
     "gtag",
+    "Hambantota",
     "headlessui",
     "heroicons",
     "Islandwide",
+    "Kalutara",
     "kebabcase",
+    "Kegalle",
+    "Kilinochchi",
     "Konika",
+    "Kurunegala",
     "Kyozera",
     "Lankans",
     "lexend",
     "Lexmark",
+    "Mannar",
+    "Matale",
+    "Matara",
+    "mcash",
     "Minota",
     "Mobitel",
+    "Monaragala",
     "Monita",
+    "Mullaitivu",
     "Nugegoda",
+    "Nuwara",
     "Ooops",
     "Pantum",
     "pascalcase",
     "Pinterest",
     "Playstations",
+    "Polonnaruwa",
+    "Puttalam",
+    "Ratnapura",
     "replyto",
     "Richo",
     "Riso",
+    "Secretariant",
     "STORYBLOK",
     "subwoofers",
     "tailwindcss",
     "techstack",
     "techstacklk",
     "unencrypted",
+    "Vavuniya",
     "Viewsonic",
     "walkie",
     "webp"
