--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-plugin-google-gtag": "^3.10.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-page-creator": "^4.3.0",
     "gatsby-plugin-postcss": "^4.12.0",
     "gatsby-plugin-prismic-previews": "^5.2.1",
     "gatsby-plugin-react-helmet": "^4.10.0",
