--- a/package.json
+++ b/package.json
@@ -31,27 +31,28 @@
     "@fontsource/open-sans": "^4.5.0",
     "@headlessui/react": "^1.4.0",
     "@icons-pack/react-simple-icons": "^4.6.1",
+    "@reach/router": "^1.3.4",
     "@sentry/gatsby": "^6.15.0",
-    "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@tailwindcss/forms": "^0.3.3",
-    "gatsby": "^3.10.2",
-    "gatsby-plugin-flow": "^2.10.0",
-    "gatsby-plugin-google-gtag": "^3.10.0",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-manifest": "^3.10.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "gatsby": "^4.3.0",
+    "gatsby-plugin-flow": "^3.3.0",
+    "gatsby-plugin-google-gtag": "^4.3.0",
+    "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-page-creator": "^4.3.0",
-    "gatsby-plugin-postcss": "^4.12.0",
+    "gatsby-plugin-postcss": "^5.3.0",
     "gatsby-plugin-prismic-previews": "^5.2.1",
-    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-robots-txt": "^1.6.8",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-sitemap": "^4.6.0",
-    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-source-filesystem": "^4.3.0",
     "gatsby-source-prismic": "^5.2.3",
     "gatsby-source-storyblok": "^3.0.2",
-    "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby-transformer-sharp": "^4.3.0",
     "keen-slider": "^6.3.3",
-    "postcss": "^8.3.6",
+    "postcss": "^8.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/eslint-parser": "^7.16.3",
     "@ls-lint/ls-lint": "^1.10.0",
     "@storybook/addon-a11y": "^6.3.7",
     "@storybook/addon-actions": "^6.3.7",
@@ -70,29 +72,30 @@
     "@storybook/builder-webpack5": "^6.3.7",
     "@storybook/manager-webpack5": "^6.3.7",
     "@storybook/react": "^6.3.7",
-    "autoprefixer": "^10.3.2",
-    "babel-eslint": "^10.1.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-flowtype": "^5.9.0",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwindcss": "^1.14.3",
-    "flow-bin": "^0.156.0",
+    "flow-bin": "^0.167.0",
     "flow-typed": "^3.3.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
     "husky": "^7.0.0",
-    "lint-staged": ">=10",
-    "postcss-cli": "^8.3.1",
+    "lint-staged": ">=12.1.2",
+    "postcss-cli": "^9.1.0",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "prop-types": "^15.7.2",
-    "tailwindcss": "^2.2.7",
+    "tailwindcss": "^3.0.1",
     "tailwindcss-debug-screens": "^2.1.0"
   },
   "repository": {
