--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fontsource/open-sans": "^4.5.0",
     "@headlessui/react": "^1.4.0",
     "@icons-pack/react-simple-icons": "^4.6.1",
+    "@prismicio/react": "^2.0.0",
     "@reach/router": "^1.3.4",
     "@sentry/gatsby": "^6.15.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
