--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gatsby-plugin-sharp": "^4.3.0",
     "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-source-google-spreadsheets": "^3.0.8",
     "gatsby-source-prismic": "^5.2.3",
     "gatsby-source-storyblok": "^3.0.2",
     "gatsby-transformer-sharp": "^4.3.0",
