--- a/package.json
+++ b/package.json
@@ -51,15 +51,12 @@
     "gatsby-source-filesystem": "^4.3.0",
     "gatsby-source-google-spreadsheets": "^3.0.8",
     "gatsby-source-prismic": "^5.2.3",
-    "gatsby-source-storyblok": "^3.0.2",
     "gatsby-transformer-sharp": "^4.3.0",
     "keen-slider": "^6.3.3",
     "postcss": "^8.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "storyblok-js-client": "^4.1.5",
-    "storyblok-react": "^0.1.2"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
