--- a/.eslintrc
+++ b/.eslintrc
@@ -43,7 +43,18 @@
     ],
     "tailwindcss/classnames-order": "error",
     "tailwindcss/no-custom-classname": "error",
-    "react/function-component-definition": "off"
+    "react/function-component-definition": "off",
+    "object-curly-newline": ["error", { "multiline": true }],
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "only-multiline",
+        "objects": "only-multiline",
+        "imports": "only-multiline",
+        "exports": "only-multiline",
+        "functions": "only-multiline"
+      }
+    ]
   },
   "settings": {
     "flowtype": {
