Changed eslint rule "react/jsx-key" to error, Renamed HeadingCategory component to HeadingPage, Changed bag, checkout, order-summary headings to use HeadingPage component, Replaced @ with .. in jsconfig for correct auto import

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
   "plugins": ["react", "react-hooks", "jsx-a11y", "prettier", "flowtype"],
   "rules": {
     "prettier/prettier": "error",
+    "react/jsx-key": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     "react/forbid-prop-types": "off",
