--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prepare": "husky install",
-    "flow": "flow status && echo 'Type checking done!'",
     "format": "pretty-quick && echo 'Formatting done!'",
     "lint": "eslint --fix --ext .js,.jsx . && ls-lint && echo 'Linting done!'",
-    "validate": "yarn flow && yarn format && yarn lint"
+    "validate": "yarn format && yarn lint"
   },
   "dependencies": {
     "@fontsource/lexend-deca": "^4.5.1",
@@ -37,7 +36,6 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
     "gatsby": "^4.3.0",
-    "gatsby-plugin-flow": "^3.3.0",
     "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-image": "^2.3.0",
     "gatsby-plugin-manifest": "^4.3.0",
@@ -78,15 +76,12 @@
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwindcss": "^1.14.3",
-    "flow-bin": "^0.167.0",
-    "flow-typed": "^3.3.1",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
     "husky": "^7.0.0",
     "lint-staged": ">=12.1.2",
