--- a/.eslintrc
+++ b/.eslintrc
@@ -1,40 +1,13 @@
 {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "es2021": true
-  },
-  "parser": "@babel/eslint-parser",
   "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
+    "react-app",
     "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended",
+    "prettier",
     "plugin:tailwindcss/recommended",
     "airbnb"
   ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module",
-    "requireConfigFile": false
-  },
-  "plugins": ["react", "react-hooks", "jsx-a11y", "prettier"],
+  "plugins": ["jsx-a11y", "prettier"],
   "rules": {
-    "prettier/prettier": "error",
-    "react/jsx-key": "error",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error",
-    "react/forbid-prop-types": "off",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": true
-      }
-    ],
     "no-restricted-imports": [
       "error",
       {
@@ -42,19 +15,7 @@
       }
     ],
     "tailwindcss/classnames-order": "error",
-    "tailwindcss/no-custom-classname": "error",
-    "react/function-component-definition": "off",
-    "object-curly-newline": ["error", { "multiline": true }],
-    "comma-dangle": [
-      "error",
-      {
-        "arrays": "only-multiline",
-        "objects": "only-multiline",
-        "imports": "only-multiline",
-        "exports": "only-multiline",
-        "functions": "only-multiline"
-      }
-    ]
+    "tailwindcss/no-custom-classname": "error"
   },
   "settings": {
     "tailwindcss": {
