--- a/package.json
+++ b/package.json
@@ -55,21 +55,14 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/eslint-parser": "^7.16.3",
     "@ls-lint/ls-lint": "^1.10.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
-    "babel-loader": "^8.2.2",
-    "eslint": "^8.4.1",
+    "eslint": "^8.0.0",
     "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-tailwindcss": "^1.14.3",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
     "husky": "^7.0.0",
@@ -77,7 +70,6 @@
     "postcss-cli": "^9.1.0",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
-    "prop-types": "^15.7.2",
     "tailwindcss": "^3.0.1",
     "tailwindcss-debug-screens": "^2.1.0"
   },
