--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@ls-lint/ls-lint": "^1.10.0",
+    "@playwright/test": "^1.26.1",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
@@ -71,7 +72,8 @@
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "tailwindcss": "^3.0.1",
-    "tailwindcss-debug-screens": "^2.1.0"
+    "tailwindcss-debug-screens": "^2.1.0",
+    "vitest": "^0.23.4"
   },
   "repository": {
     "type": "git",
