--- a/.eslintrc
+++ b/.eslintrc
@@ -3,10 +3,10 @@
     "react-app",
     "plugin:jsx-a11y/recommended",
     "prettier",
-    "plugin:tailwindcss/recommended",
-    "airbnb"
+    "plugin:tailwindcss/recommended"
+    // "airbnb"
   ],
-  "plugins": ["jsx-a11y", "prettier"],
+  "plugins": ["jsx-a11y"],
   "rules": {
     "no-restricted-imports": [
       "error",
