--- a/package.json
+++ b/package.json
@@ -17,62 +17,67 @@
     "build-serve": "gatsby build && gatsby serve",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "",
+    "unit-test": "vitest",
+    "unit-test-coverage": "vitest run --coverage",
+    "e2e-test": "playwright test && E2E testing done!",
+    "test": "yarn unit-test && yarn e2e-test && echo 'Testing done!'",
     "prepare": "husky install",
-    "format": "pretty-quick && echo 'Formatting done!'",
+    "format": "pretty-quick --staged && echo 'Formatting done!'",
     "lint": "eslint --fix --ext .js,.jsx . && ls-lint && echo 'Linting done!'",
     "validate": "yarn format && yarn lint"
   },
   "dependencies": {
-    "@fontsource/lexend-deca": "^4.5.1",
-    "@fontsource/open-sans": "^4.5.0",
-    "@headlessui/react": "^1.4.0",
-    "@icons-pack/react-simple-icons": "^4.6.1",
-    "@prismicio/react": "^2.0.0",
+    "@fontsource/lexend-deca": "^4.5.11",
+    "@fontsource/open-sans": "^4.5.11",
+    "@headlessui/react": "^1.7.2",
+    "@icons-pack/react-simple-icons": "^4.7.2",
+    "@prismicio/react": "^2.5.0",
     "@reach/router": "^1.3.4",
-    "@sentry/gatsby": "^6.15.0",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "gatsby": "^4.3.0",
-    "gatsby-plugin-google-gtag": "^4.3.0",
-    "gatsby-plugin-image": "^2.3.0",
-    "gatsby-plugin-manifest": "^4.3.0",
-    "gatsby-plugin-page-creator": "^4.3.0",
-    "gatsby-plugin-postcss": "^5.3.0",
-    "gatsby-plugin-prismic-previews": "^5.2.1",
+    "@sentry/gatsby": "^6.19.7",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.4.1",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "gatsby": "^4.24.0",
+    "gatsby-plugin-google-gtag": "^4.24.0",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-page-creator": "^4.24.0",
+    "gatsby-plugin-postcss": "^5.24.0",
+    "gatsby-plugin-prismic-previews": "^5.2.10",
     "gatsby-plugin-react-helmet": "^5.3.0",
-    "gatsby-plugin-robots-txt": "^1.6.8",
-    "gatsby-plugin-sharp": "^4.3.0",
-    "gatsby-plugin-sitemap": "^5.3.0",
-    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-sitemap": "^5.24.0",
+    "gatsby-source-filesystem": "^4.24.0",
     "gatsby-source-google-spreadsheets": "^3.0.8",
-    "gatsby-source-prismic": "^5.2.3",
-    "gatsby-transformer-sharp": "^4.3.0",
-    "keen-slider": "^6.3.3",
-    "postcss": "^8.4.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-source-prismic": "^5.2.10",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "keen-slider": "^6.8.2",
+    "postcss": "^8.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@ls-lint/ls-lint": "^1.10.0",
+    "@ls-lint/ls-lint": "^1.11.2",
     "@playwright/test": "^1.26.1",
-    "@tailwindcss/line-clamp": "^0.3.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.0.0",
-    "eslint-config-airbnb": "^19.0.2",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.7",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-tailwindcss": "^1.14.3",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.24",
-    "husky": "^7.0.0",
+    "eslint-plugin-tailwindcss": "^1.17.2",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
+    "husky": "^7.0.4",
     "lint-staged": ">=12.1.2",
     "postcss-cli": "^9.1.0",
-    "prettier": "^2.3.2",
-    "pretty-quick": "^3.1.1",
-    "tailwindcss": "^3.0.1",
-    "tailwindcss-debug-screens": "^2.1.0",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.1.8",
+    "tailwindcss-debug-screens": "^2.2.1",
     "vitest": "^0.23.4"
   },
   "repository": {
