--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "gatsby-plugin-page-creator": "^4.24.0",
     "gatsby-plugin-postcss": "^5.24.0",
     "gatsby-plugin-prismic-previews": "^5.2.10",
-    "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-robots-txt": "^1.7.1",
     "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-plugin-sitemap": "^5.24.0",
@@ -56,8 +55,7 @@
     "keen-slider": "^6.8.2",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@ls-lint/ls-lint": "^1.11.2",
