--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "files.autoSave": "onFocusChange",
   "js/ts.implicitProjectConfig.checkJs": true,
   "editor.formatOnSave": true,
+  "css.lint.unknownAtRules": "ignore",
   "editor.codeActionsOnSave": {
     "source.organizeImports": true,
     "source.fixAll.eslint": true,
