--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "validate": "yarn format && yarn lint"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.7.0",
     "@headlessui/react": "^1.7.2",
     "@icons-pack/react-simple-icons": "^4.7.2",
     "@prismicio/react": "^2.5.0",
@@ -37,7 +38,6 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "gatsby": "^4.24.0",
-    "gatsby-plugin-google-gtag": "^4.24.0",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-page-creator": "^4.24.0",
