updated the company name

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,11 +66,11 @@
     "Secretariant",
     "Smartboard",
     "smarthome",
+    "solidtech",
     "STORYBLOK",
     "subwoofers",
     "tailwindcss",
-    "techstack",
-    "techstacklk",
+    "Typegen",
     "unencrypted",
     "Vavuniya",
     "Viewsonic",
