Configured eslint for graphql and typescript, Added graphql types to gitignore, Added graphql.config.js for extension integration, Remove @ts-ignore annotations and added custom type for svg imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,10 @@
   },
   "include": [
     "./src/**/*",
+    "src/custom.d.ts",
     "./gatsby-node.ts",
-    "gatsby-config.js",
+    "gatsby-config.ts",
+    "gatsby-browser.ts",
     "./plugins/**/*"
   ],
   "exclude": [".cache", ".public", "node_modules", ".husky/_"]
