--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "yarn unit-test && yarn e2e-test && echo 'Testing done!'",
     "prepare": "husky install",
     "format": "pretty-quick --staged && echo 'Formatting done!'",
-    "lint": "eslint --fix --ext .js,.jsx . && ls-lint && echo 'Linting done!'",
+    "lint": "eslint --fix --ext .js,.jsx,ts,tsx . && ls-lint && echo 'Linting done!'",
     "validate": "yarn format && yarn lint"
   },
   "dependencies": {
@@ -56,10 +56,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@graphql-eslint/eslint-plugin": "^3.11.2",
     "@ls-lint/ls-lint": "^1.11.2",
     "@playwright/test": "^1.26.1",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/node": "^18.7.23",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -74,6 +78,7 @@
     "pretty-quick": "^3.1.3",
     "tailwindcss": "^3.1.8",
     "tailwindcss-debug-screens": "^2.2.1",
+    "typescript": "^4.8.4",
     "vitest": "^0.23.4"
   },
   "repository": {
