Disabled graphql typegen due to cache error, Removed eslint processor override to fix Eslint "ProjectNotFoundError"

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,7 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
-      "processor": "@graphql-eslint/graphql",
+      // "processor": "@graphql-eslint/graphql",
       "parser": "@typescript-eslint/parser",
       "extends": [
         "eslint:recommended",
