--- a/package.json
+++ b/package.json
@@ -67,8 +67,11 @@
     "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "latest",
     "eslint-plugin-tailwindcss": "^1.17.2",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
     "husky": "^7.0.4",
